--- a/rules.html
+++ b/rules.html
@@ -842,7 +842,7 @@
           </td>
         </tr>
         <tr>
-          <td>Viceoroy</td>
+          <td>Brig</td>
           <td>
             <ul>
               <li>Tier 3 Unit</li>
@@ -854,7 +854,7 @@
           </td>
         </tr>
         <tr>
-          <td>Steam Ships</td>
+          <td>Steam Ship</td>
           <td>
             <ul>
               <li>Tier 4 Unit</li>
@@ -897,7 +897,7 @@
           </td>
         </tr>
         <tr>
-          <td>Irionclads</td>
+          <td>Ironclads</td>
           <td>
             <ul>
               <li>Tier 4 Unit</li>
