--- a/rules.html
+++ b/rules.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
     <title>Civilization Simulation</title>
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     <link rel="icon" type="image/png" href="CivLogo.png">
@@ -100,14 +101,14 @@
       </ol>
     </div>
 	<h2>Starting Out:</h2>
-	<ul>
+	<ol>
 		<li>Find out who out of your class is going to be a leader (there needs to be exactly 6 people)</li>
 		<li>WARNING: Some people may already be leaders, check the Class Information tab to find out!</li>
 		<li>After leaders are chosen, people who aren't leaders must flock to a leader (try to distribute the non-leaders as evenly as possible)</li>
 		<li>Now, in order of those on the list of leaders, pick a country! Be warned though, countries have different strengths and weaknesses</li>
 		<li>After every leader has chosen their civilization, have them email me: their civilization, a new civilization name, a summary of what their civilization is about<br>email me at daniel.krawciw@s.stemk12.org</li>
 		<li>Every civilization now recieves 5 gold and what their civization would earn in one turn<br>You can find how much one would earn in one turn by going to the Calculator tab, and adding your civilization's bonus (if it has one)</li>
-	</ul>
+	</ol>
 	<h3>Watch this short video on general rules:</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/yShadjtASaA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <table align="center" width=100%>
@@ -366,7 +367,7 @@
     </ul>
       <br>
       <hr>
-      <h2>Religous:</h2>
+      <h2>Religious:</h2>
       <hr>
       <div class="smallDiv">
         <h3>Tier 1 - Temple</h3>
@@ -483,41 +484,41 @@
       <div class="smallDiv">
         <h3>Tier 1 - Library</h3>
         <h4>The vast array of knowledge at your disposal gives you an extra 1 science per turn</h4>
-        <h3>Cost: 100 Gold</h3>
+        <h3>Cost: 20 Gold</h3>
       </div>
       <table class="upgradeTable">
         <tr>
-          <td class="upgradeTd">
+          <td class="upgra,deTd">
             <h3>Tier 2 - Simple Machinery</h3>
             <h4>New technology allows you to mesh more science with basic tasks to make them take less time/energy. Increase production of every production-based building by 2 per turn</h4>
-            <h3>Cost: 150 Gold</h3>
+            <h3>Cost: 25 Gold</h3>
           </td>
           <td class="upgradeTd">
             <h3>Tier 2 - Scientific Weaponry</h3>
             <h4>The cutting edge technology you own gives all of your units a +1 strength bonus, and allows them to move an extra tile</h4>
-            <h3>Cost: 100 Gold</h3>
+            <h3>Cost: 25 Gold</h3>
           </td>
           <td class="upgradeTd">
             <h3>Tier 2 - Scientific Method</h3>
-            <h4>The Scientific method improves the rate and the veriety of producing new ideas. This in turn increases the rate of scientific production (+3 science per turn on top of previous bonuses)</h4>
-            <h3>Cost: 120 Gold</h3>
+            <h4>The Scientific method improves the rate and the veriety of producing new ideas. You can pick one non-military building from the next tier up to be able to produce. If there are no more tiers, you can produce a special variant of exsisting buildings.</h4>
+            <h3>Cost: 25 Gold</h3>
           </td>
         </tr>
         <tr>
           <td class="upgradeTd">
             <h3>Tier 3 - Advanced Machinery</h3>
             <h4>More scientific advances have allowed your civilization to decrease the usage of energy/time. Increase the amount of production per building by 5 on top of the previous bonus</h4>
-            <h3>Cost: 150 Gold</h3>
+            <h3>Cost: 40 Gold</h3>
           </td>
           <td class="upgradeTd">
             <h3>Tier 3 - Advanced Scientific Weaponry</h3>
             <h4>The cost of science when purchasing military technology is reduced by 2, and you have an extra 1 tile movement on top of the previous bonus</h4>
-            <h3>Cost: 200 Gold</h3>
+            <h3>Cost: 40 Gold</h3>
           </td>
           <td class="upgradeTd">
             <h3>Tier 3 - World Library</h3>
             <h4>The support of the scientific community has allowed your country to recieve a one of a kind library. Every time a unit trades with you, you recieve 1 science</h4>
-            <h3>Cost: 200 Gold</h3>
+            <h3>Cost: 40 Gold</h3>
           </td>
         </tr>
       </table>
@@ -842,7 +843,7 @@
           </td>
         </tr>
         <tr>
-          <td>Brig</td>
+          <td>Viceoroy</td>
           <td>
             <ul>
               <li>Tier 3 Unit</li>
@@ -854,7 +855,7 @@
           </td>
         </tr>
         <tr>
-          <td>Steam Ship</td>
+          <td>Steam Ships</td>
           <td>
             <ul>
               <li>Tier 4 Unit</li>
@@ -897,7 +898,7 @@
           </td>
         </tr>
         <tr>
-          <td>Ironclads</td>
+          <td>Irionclads</td>
           <td>
             <ul>
               <li>Tier 4 Unit</li>
@@ -1051,9 +1052,28 @@
     <hr>
     <h2 id="extra">Extra Rules:</h2>
     <hr>
+    <div class="projectDiv">
+      <h2>Settling Cities:</h2>
+      <h3></h3>
+    </div>
+    <div class="projectDiv">
+      <h2>Reformations:</h2>
+      <h3></h3>
+    </div>
+    <div class="projectDiv">
+      <h2>Revolutions:</h2>
+      <h3></h3>
+    </div>
+    <div class="projectDiv">
+      <h2>Religion:</h2>
+      <h3></h3>
+    </div>
+    <div class="projectDiv">
+      <h2>Victories:</h2>
+      <h3></h3>
+    </div>
     <script>
 	var img = document.querySelector("img");
-
         img.addEventListener("click", function(){
             self.location = "index.html";
         });
